# Base-donnees-SQLite

./: .gitignore  CLAUDE.md  Cargo.toml  JOURNAL.md
db/: schema.sql  seed_passthrough.sql
src/: lib.rs
src/analyze/: mod.rs
src/db/: mod.rs
src/ingest/: mod.rs
tests/: analyze.rs  ingest.rs  schema.rs
